# markdown

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DESIGN_BRIEF.md  HANDOFF_NEXT_SESSION.md  LICENSE  PRODUCT_PLAN.md  README.md  WINDOWS_LINUX_RELEASE_TASK.md  index.html  markdown.pen  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  MarkdownEditor.tsx  MarkdownPrintDocument.tsx  appContributions.ts  autosave.ts  contentWidth.ts  documentSession.ts  editorContributions.ts  editorFormat.ts  editorInputs.ts  fileAdapter.ts  listEditing.ts  markdownCommands.ts  markdownPreview.ts  styles.css  tauriFileAdapter.ts  theme.ts  toolbarRegistry.ts  updater.ts  viewMode.ts  webFileAdapter.ts  y-codemirror-next.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/cloudCollaboration/: awareness.ts  contribution.tsx  session.ts
src/comments/: CommentsSidebar.tsx  commands.ts  contribution.ts  identity.ts  storage.ts  types.ts
tests/e2e/: editor.spec.ts
