[package]
name = "markdown-editor"
version = "0.0.22"
description = "Local-first Markdown editor"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/Dede98/markdown"
authors = ["Dejan Brinker"]

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default features. Add `custom-protocol` only for prod builds via tauri-cli.
custom-protocol = ["tauri/custom-protocol"]
